Fixed header overlap of targets

--- a/css/v2.css
+++ b/css/v2.css
@@ -19,6 +19,10 @@ html {
 	max-width: 100vw;
 }
 
+* {
+	scroll-margin-top: 7rem;
+}
+
 @supports not (-ms-ime-align: auto) {
 	/*
 	 * Resets for <details>/<summary>, see:
